--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,9 @@ body {
 canvas {
     border: 4px solid white;
 }
+
+.buttons {
+    border: 4px solid black;
+    width: 1000px;
+    height: 100px;
+}
