--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,40 @@
-body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: darkgray;
-    flex-direction: column;
-    font-family: sans-serif;
-}
-
-canvas {
-    border: 4px solid white;
-}
-
-.buttons {
-    border: 4px solid black;
-    width: 1000px;
-    height: 100px;
-}
+    * {
+        /* box-sizing: border-box; */
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: darkgray;
+        flex-direction: column;
+        font-family: sans-serif;
+    }
+    
+    h1 {
+        font-size: 50px;
+    }
+    
+    canvas {
+        border: 4px solid white;
+    }
+    
+    .buttons {
+        border: 4px solid white;
+        width: 1000px;
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .buttons button {
+        width: 30%;
+        border: 5px solid #000;
+        font-size: 60px;
+        text-transform: uppercase;
+        font-weight: 800;
+    }
