--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,46 @@
-    * {
-        /* box-sizing: border-box; */
-        margin: 0;
-        padding: 0;
-    }
-    
-    body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: darkgray;
-        flex-direction: column;
-        font-family: sans-serif;
-    }
-    
-    h1 {
-        font-size: 50px;
-    }
-    
-    canvas {
-        border: 4px solid white;
-    }
-    
-    .buttons {
-        border: 4px solid white;
-        width: 1000px;
-        height: 50px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .buttons button {
-        width: 30%;
-        border: 5px solid #000;
-        font-size: 30px;
-        text-transform: uppercase;
-        font-weight: 800;
-    }
+* {
+    /* box-sizing: border-box; */
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: darkgray;
+    flex-direction: column;
+    font-family: sans-serif;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+canvas {
+    border: 4px solid white;
+}
+
+.buttons {
+    border: 4px solid white;
+    width: 1000px;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.buttons button {
+    width: 30%;
+    border: 5px solid #000;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+    transform: scale(1);
+    transition: .2s;
+}
+
+button:active {
+    transform: scale(.96)
+}
