--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,21 @@ canvas {
 }
 
 .buttons button {
-    width: 30%;
+    width: 50%;
     border: 5px solid #000;
     font-size: 30px;
     text-transform: uppercase;
     font-weight: 800;
     transform: scale(1);
     transition: .2s;
+}
+
+button:nth-child(1) {
+    border-right: 2px solid black;
+}
+
+button:nth-child(2) {
+    border-left: 2px solid black;
 }
 
 button:active {
