--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ canvas {
 }
 
 .buttons button {
-    width: 50%;
+    width: 100%;
     border: 5px solid #000;
     font-size: 30px;
     text-transform: uppercase;
@@ -41,12 +41,9 @@ canvas {
     transition: .2s;
 }
 
-button:nth-child(1) {
-    border-right: 2px solid black;
-}
-
 button:nth-child(2) {
     border-left: 2px solid black;
+    display: none;
 }
 
 button:active {
