--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,13 @@ body {
     font-family: sans-serif;
 }
 
-h1 {
+h1:first-of-type {
+    font-size: 80px;
+    position: absolute;
+    top: 30px;
+}
+
+h1.score {
     font-size: 50px;
     position: absolute;
     top: 150px;
