--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     background-color: darkgray;
     flex-direction: column;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1:first-of-type {
